SERVER-21673 runConnectCallback in the shell